Some Tests Written. 3 are still failing